--- a/packages/addons/values.yaml
+++ b/packages/addons/values.yaml
@@ -136,8 +136,8 @@ keycloak:
   chartName: keycloak
   namespace: keycloak
   releaseName: keycloak
-  defaultVersion: "24.7.3"
-  chartRepository: "https://charts.bitnami.com/bitnami"
+  defaultVersion: "26.3.3"
+  chartRepository: "oci://registry-1.docker.io/bitnamicharts"
   valuesObject:
     httpRelativePath: '/{{ if eq .metadata.labels.path_routing "true" }}keycloak/{{ end }}'
     ingress:
