--- a/packages/addons/values.yaml
+++ b/packages/addons/values.yaml
@@ -137,7 +137,7 @@ keycloak:
   namespace: keycloak
   releaseName: keycloak
   defaultVersion: "26.3.3"
-  chartRepository: "oci://registry-1.docker.io/bitnamicharts"
+  chartRepository: "https://charts.bitnami.com/bitnami"
   valuesObject:
     httpRelativePath: '/{{ if eq .metadata.labels.path_routing "true" }}keycloak/{{ end }}'
     ingress:
