Change Keycloak image repository to bitnamilegacy/keycloak

--- a/packages/keycloak/values.yaml
+++ b/packages/keycloak/values.yaml
@@ -9,7 +9,7 @@ global:
     allowInsecureImages: true
 
 image:
-  repository: bitnamilegacy/postgresql
+  repository: bitnamilegacy/keycloak
 
 auth:
   adminUser: cnoe-admin
