--- a/packages/backstage/values.yaml
+++ b/packages/backstage/values.yaml
@@ -121,6 +121,8 @@ backstage:
       baseUrl: ${ARGO_WORKFLOWS_URL}
 postgresql:
   enabled: true
+  image:
+    repository: bitnamilegacy/postgresql 
   auth:
     username: "backstage"
     existingSecret: "backstage-env-vars"
