--- a/templates/backstage/catalog-info.yaml
+++ b/templates/backstage/catalog-info.yaml
@@ -6,9 +6,7 @@ metadata:
 spec:
   targets:
     - ./basic/template.yaml
-    - ./argo-workflows/template.yaml
-    - ./app-with-bucket/template.yaml
-    - ./ray-serve/template-ray-serve.yaml
+    - ./ai-agents/template.yaml
 ---
 apiVersion: backstage.io/v1alpha1
 kind: Location
