--- a/templates/backstage/ai-agents/template.yaml
+++ b/templates/backstage/ai-agents/template.yaml
@@ -29,14 +29,7 @@ spec:
           enum:
             - strands
             - lang-graph
-        repoUrl:
-          title: Repository Location
-          type: string
-          ui:field: RepoUrlPicker
-          ui:options:
-            allowedHosts:
-              - github.com  
-        
+
   steps:
     - id: deploy-template
       name: Generating application deployment template
@@ -46,8 +39,8 @@ spec:
         targetPath: ./agent-deploy
         values:
           name: ${{parameters.agentName}}
-          repoUrl: ${{parameters.repoUrl}}
-    
+          repoUrl: https://github.com/cnoe-idp-demo/${{parameters.agentName}}
+
     - id: agent-template
       name: Generating agent code template
       action: fetch:template
@@ -56,8 +49,8 @@ spec:
         targetPath: ./agent
         values:
           name: ${{parameters.agentName}}
-          repoUrl: ${{parameters.repoUrl}}
-    
+          repoUrl: github.com?owner=cnoe-idp-demo&repo=${{parameters.agentName}}
+
     - id: provisioner-template
       name: Generating agent code template
       action: fetch:template
@@ -66,7 +59,7 @@ spec:
         targetPath: ./provisioner
         values:
           name: ${{parameters.agentName}}
-          repoUrl: ${{parameters.repoUrl}}
+          repoUrl: github.com?owner=cnoe-idp-demo&repo=${{parameters.agentName}}
 
     - id: publish-2-app-repo
       name: Publish to agent repo
@@ -74,16 +67,16 @@ spec:
       input:
         description: This is an sample agent
         sourcePath: ./agent
-        repoUrl: ${{parameters.repoUrl}}?owner=cnoe-idp-demo&repo=${{parameters.agentName}}
+        repoUrl: github.com?owner=cnoe-idp-demo&repo=${{parameters.agentName}}
         defaultBranch: main
-    
+
     - id: publish-2-deploy-repo
       name: Publish to agent deploy repo
       action: github:repo:push
       input:
         description: This is an sample agent
         sourcePath: ./agent-deploy
-        repoUrl: ${{parameters.repoUrl}}?owner=cnoe-idp-demo&repo=${{parameters.agentName}}
+        repoUrl: github.com?owner=cnoe-idp-demo&repo=${{parameters.agentName}}-deploy
         defaultBranch: main
 
     - id: create-provisioner-workflow
@@ -95,14 +88,14 @@ spec:
         clusterName: local
         values:
           name: ${{parameters.agentName}}
-          repoUrl: ${{parameters.repoUrl}}
+          repoUrl: github.com?owner=cnoe-idp-demo&repo=${{parameters.agentName}}
 
     - id: register
       name: Register
       action: catalog:register
       input:
         repoContentsUrl: ${{ steps['publish-app-repo'].output.repoContentsUrl }}
-        catalogInfoPath: 'catalog-info.yaml'
+        catalogInfoPath: "catalog-info.yaml"
 
   output:
     links:
