--- a/templates/backstage/ai-agents/template.yaml
+++ b/templates/backstage/ai-agents/template.yaml
@@ -38,6 +38,7 @@ spec:
         repoUrl: github.com?owner=cnoe-idp-demo&repo=${{parameters.agentName}}
         description: This is a sample agent
         repoVisibility: public
+        access: backstage-cnoe-mm
 
     - id: create-deploy-repo
       name: Create Deploy Repository
@@ -46,6 +47,7 @@ spec:
         repoUrl: github.com?owner=cnoe-idp-demo&repo=${{parameters.agentName}}-deploy
         description: This is a sample agent deployment
         repoVisibility: public
+        access: backstage-cnoe-mm
 
     - id: deploy-template
       name: Generating application deployment template
