--- a/templates/backstage/ai-agents/strands/ci/templates/external_secrets.yaml
+++ b/templates/backstage/ai-agents/strands/ci/templates/external_secrets.yaml
@@ -20,20 +20,20 @@
 #         key: gitea-credential
 #         property: password
 ---
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: argocd-credentials
-  namespace: {{ .Values.namespace }}
-spec:
-  secretStoreRef:
-    name: argocd
-    kind: ClusterSecretStore
-  refreshInterval: "0"
-  target:
-    name: argocd-credentials
-  data:
-    - secretKey: ARGOCD_ADMIN_PASSWORD
-      remoteRef:
-        key: argocd-initial-admin-secret
-        property: password
+# apiVersion: external-secrets.io/v1
+# kind: ExternalSecret
+# metadata:
+#   name: argocd-credentials
+#   namespace: {{ .Values.namespace }}
+# spec:
+#   secretStoreRef:
+#     name: argocd
+#     kind: ClusterSecretStore
+#   refreshInterval: "0"
+#   target:
+#     name: argocd-credentials
+#   data:
+#     - secretKey: ARGOCD_ADMIN_PASSWORD
+#       remoteRef:
+#         key: argocd-initial-admin-secret
+#         property: password
