--- a/templates/backstage/ai-agents/strands/ci/templates/argoevents.yaml
+++ b/templates/backstage/ai-agents/strands/ci/templates/argoevents.yaml
@@ -58,8 +58,6 @@ spec:
                       value: "https://github.com/cnoe-idp-demo//{{ .Values.agentName}}-deploy"
                     - name: image
                       value: "{{ .Values.imageBase }}/{{ .Values.agentName }}"
-                    - name: ecr-image
-                      value: "229560443702.dkr.ecr.us-west-2.amazonaws.com/{{ .Values.agentName}}"
                     - name: commit_sha
                       value: "{{`{{ .Input.body.head_commit.id | default .Input.body.after | default 'latest' }}`}}"
                     - name: hostname
@@ -96,6 +94,16 @@ spec:
                               - name: commit_sha
                                 value: "{{`{{workflow.parameters.commit_sha}}`}}"
                           depends: "clone"
+                        
+                        - name: build-arm64-image
+                          template: build-image-with-kaniko
+                          arguments:
+                            parameters:
+                              - name: image
+                                value: "{{`{{workflow.parameters.image}}`}}"
+                              - name: tag-version
+                                value: "{{`{{workflow.parameters.commit_sha}}`}}"
+                          depends: "package-agent-code"
 
                   - name: clonerepo
                     inputs:
