--- a/templates/backstage/ai-agents/strands/ci/templates/role_binding.yaml
+++ b/templates/backstage/ai-agents/strands/ci/templates/role_binding.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: kaniko-sa-binding
+  name: ci-workflow-sa-binding
   namespace: {{ .Values.namespace }}
 subjects:
 - kind: ServiceAccount
